--- a/style.css
+++ b/style.css
@@ -77,6 +77,23 @@ nav ul li{
   padding: 0px 12px 0px 12px;
 }
 
+.content{
+  width: 85%;
+}
+/*CSS associated to general-content class*/
+
+.general-content{
+  box-shadow: 2px 2px 10px #BBB;
+  border-radius: 10px;
+  background-color: rgb(238, 238, 238);
+  font-family: 'Overpass', sans-serif;
+}
+
+.general-content h2{
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 footer{
   text-align: center;
 }
