--- a/style.css
+++ b/style.css
@@ -77,14 +77,21 @@ nav ul li{
   padding: 0px 12px 0px 12px;
 }
 
-.content{
-  width: 85%;
+#content{
+  margin-left: 7%;
+  margin-right: 7%;
 }
 /*CSS associated to general-content class*/
 
 .general-content{
+  padding-left: 25px;
+  padding-top: 5px;
+  padding-top: 5px;
+  margin-top: 10px;
+  padding-bottom: 10px;
+
   box-shadow: 2px 2px 10px #BBB;
-  border-radius: 10px;
+  border-radius: 15px;
   background-color: rgb(238, 238, 238);
   font-family: 'Overpass', sans-serif;
 }
