--- a/style.css
+++ b/style.css
@@ -87,12 +87,8 @@ nav ul li{
 
 .general-content{
   overflow: auto;
-  padding-left: 25px;
-  padding-top: 5px;
-  padding-top: 5px;
-  margin-top: 10px;
-  padding-bottom: 10px;
-
+  padding: 5px 30px 5px 30px;
+  margin: 10px 20px 10px 20px;
   box-shadow: 2px 2px 10px #BBB;
   border-radius: 15px;
   background-color: rgb(238, 238, 238);
@@ -100,7 +96,7 @@ nav ul li{
 }
 
 .general-content img{
-  width: 150px;
+  width: 250px;
   margin: 0px 40px 40px 40px;
   float: right;
 }
