--- a/style.css
+++ b/style.css
@@ -1,18 +1,10 @@
 body{
   margin: 0 auto;
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(225, 225, 225);
 }
 
 header{
   font-family: 'Gloria Hallelujah', cursive;
-}
-
-header #logo{
-  float: left;
-}
-
-header #contacto{
-  float: justify;
 }
 
 nav{
@@ -20,13 +12,14 @@ nav{
 }
 
 #content{
-  margin-left: 7%;
-  margin-right: 7%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 8%;
+  margin-right: 8%;
 }
 
 
 /*CSS associated to general-content class*/
-
 .general-content{
   overflow: auto;
   padding: 5px 30px 5px 30px;
@@ -48,6 +41,8 @@ nav{
   text-decoration: underline;
 }
 
+
 footer{
+  padding: 20px;
   text-align: center;
 }
