--- a/style.css
+++ b/style.css
@@ -1,25 +1,90 @@
 body{
   margin: 0 auto;
-  background-color: rgb(225, 225, 225);
+  background-color: rgb(230, 230, 230);
 }
 
 header{
   font-family: 'Gloria Hallelujah', cursive;
+  border-style: solid;
+  border-color: rgb(94, 57, 30);
+  border-width: 8px;
+  background-color: rgb(4, 33, 15);
+  overflow: auto;
+  padding: 30px;
+  color: rgb(220, 220, 220);
+}
+
+header .header-item{
+  width: 33%;
+  float: left;
+  overflow: auto;
+}
+
+header h1,h3{
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+header #header-left{
+  font-size: 140%;
+}
+
+header #header-center{
+  text-align: center;
+}
+
+header #header-right{
+  text-align: center;
+}
+
+header #logo{
+  float: left;
+}
+
+header #contacto{
+  float: justify;
 }
 
 nav{
   font-family: 'Patrick Hand', cursive;
+  background-color: rgb(94, 57, 30);
+  border-top-color: black;
+  border-top-width: 1px;
+  border-top-style: solid;
+  overflow: auto;
+}
+
+nav a{
+  text-decoration: none;
+  color: white;
+}
+
+nav #menu{
+  float: left;
+}
+
+nav #login{
+  margin: 15px 15px 0px 0px;
+  float: right;
+}
+
+nav ul li{
+  display: inline;
+  list-style: none;
+  border-right-style: solid;
+  border-right-width: 1px;
+  border-right-color: black;
+  padding: 0px 12px 0px 12px;
 }
 
 #content{
-  margin-top: 30px;
-  margin-bottom: 30px;
-  margin-left: 8%;
-  margin-right: 8%;
+  margin-left: 7%;
+  margin-right: 7%;
 }
 
 
 /*CSS associated to general-content class*/
+
 .general-content{
   overflow: auto;
   padding: 5px 30px 5px 30px;
@@ -41,8 +106,6 @@ nav{
   text-decoration: underline;
 }
 
-
 footer{
-  padding: 20px;
   text-align: center;
 }
