--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ nav ul li{
 .btn-primary {
   box-shadow: 0;
   border: none;
-  background-color: #546e7a;
+  background-color: #ffab40;
   border-color: #48c9b0;
   color: #ffffff;
   outline: none;
@@ -126,7 +126,7 @@ nav ul li{
 }
 
 .btn-primary:hover {
-  background-color: #90a4ae;
+  background-color: #ffd180;
 }
 
 .form-group {
@@ -173,28 +173,8 @@ input, textarea {
   margin-top: 1.25em;
 }
 
-
-.has-error input, .has-error textarea {
-  color: #e74c3c;
-  border-color: #e74c3c;
-}
-
-.has-error .input-field-icon {
-  color: #e74c3c;
-}
-
-.has-success input, .has-success textarea {
-  color: #2ecc71;
-  border-color: #2ecc71;
-}
-
-.has-success .input-field-icon {
-  color: #2ecc71;
-}
-
-
 input:focus, textarea:focus {
-  border-color: #48c9b0;
+  border-color: #ffab40;
   color: #34495e;
 }
 
@@ -209,7 +189,7 @@ textarea.form-control {
 
 textarea.form-control:focus {
   height: 200px;
-  border-color: #48c9b0;
+  border-color: #ffab40;
 }
 
 .social {
