--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
   margin: 0 auto;
-  background-color: rgb(230, 230, 230);
+  background-color: #e0e0e0;
 }
 
 .top-panel{
   overflow: auto;
-  background-color: #546e7a;
+  background-color: #212121;
   box-shadow: 2px 2px 5px rgb(94, 94, 94);
 }
 
@@ -30,7 +30,7 @@ header{
 }
 
 .link-item :hover{
-  background-color: #435d69;
+  color: #ffab40;
 }
 
 .logo-header{
@@ -47,10 +47,21 @@ nav{
   font-family: 'Patrick Hand', cursive;
 }
 
-nav ul li{
+nav li{
+  list-style-type: none;
   display: inline;
-  list-style: none;
-  padding: 0px 12px 0px 12px;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+nav a:hover{
+  color: #ffab40;
+}
+
+.activo{
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #ffab40;
 }
 
 #content{
@@ -67,7 +78,7 @@ nav ul li{
   margin: 10px 20px 10px 20px;
   box-shadow: 2px 2px 10px #BBB;
   border-radius: 15px;
-  background-color: rgb(238, 238, 238);
+  background-color: #fafafa;
   font-family: 'Overpass', sans-serif;
 }
 
