--- a/style.css
+++ b/style.css
@@ -163,15 +163,15 @@ nav li{
 /* CSS associated to gallery-content */
 .gallery-content{
   color: white;
-  font-size: 120%;
-  padding: 15px;
+  font-size: 100%;
+  padding: 10px;
   background-color: rgb(79, 50, 0);
   overflow: auto;
-  margin: 70px 30px 40px 30px;
+  margin: 30px;
   border-radius: 8px;
   font-family: 'Overpass', sans-serif;
   background-color: #212121;
-  box-shadow: 2px 2px 10px #CCC
+  box-shadow: 5px 5px 10px #EEE
 }
 
 .gallery-content .gallery-text{
@@ -189,7 +189,7 @@ nav li{
 }
 
 .gallery-content .gallery-image img{
-  width: 60%;
+  width: 50%;
   border: solid 3px white;
   margin-top: 50px;
   margin-right: 80px;
