--- a/style.css
+++ b/style.css
@@ -189,7 +189,10 @@ nav li{
 }
 
 .gallery-content .gallery-image iframe{
-  margin-left: 0px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 90%;
+  height: 380px;
 }
 
 .gallery-content .gallery-image img{
