--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@ nav{
 }
 
 nav ul{
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin-top: 0;
+  margin-bottom: 0;
   overflow: auto;
   padding: 2px;
 }
