--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ nav li{
   overflow: auto;
   padding: 5px 30px 5px 30px;
   margin: 10px 20px 10px 20px;
-  box-shadow: 2px 2px 10px #BBB;
+  box-shadow: 6px 6px 10px #BBB;
   border-radius: 8px;
   background-color: #fafafa;
   font-family: 'Overpass', sans-serif;
@@ -164,13 +164,12 @@ nav li{
   color: white;
   font-size: 100%;
   padding: 10px;
-  background-color: rgb(79, 50, 0);
   overflow: auto;
   margin: 30px;
   border-radius: 8px;
   font-family: 'Overpass', sans-serif;
   background-color: #212121;
-  box-shadow: 10px 10px 10px #434343;
+  box-shadow: 10px 10px 30px #434343;
 }
 
 .gallery-content .gallery-text{
@@ -220,6 +219,10 @@ nav li{
 .gallery-content .gallery-image input{
   width: 50%;
   margin-top: 50px;
+}
+
+#index-content .gallery-content{
+  padding: 50px;
 }
 
 #user-profile .gallery-image{
