--- a/style.css
+++ b/style.css
@@ -264,6 +264,19 @@ nav li {
   margin-left: 5%;
 }
 
+.subjectsList .subject-level{
+  margin-top: 30px;
+}
+
+.subjectsList a{
+  text-decoration: none;
+  color: white;
+}
+
+.subjectsList a:hover{
+  text-decoration: underline;
+  color: orange;
+}
 
 /* CSS associated to forms */
 
